@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2010-2021  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
+ * Copyright (C) 2010-2021, 2023  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
  * Copyright (C) 2020       Federal University of Rio Grande do Sul (UFRGS)
  *
  * StarPU is free software; you can redistribute it and/or modify
@@ -28,6 +28,8 @@
 #pragma GCC visibility push(hidden)
 
 enum _starpu_worker_status_index;
+
+extern int _starpu_codelet_profiling;
 
 /** Create a task profiling info structure (with the proper time stamps) in case
  * profiling is enabled. */
